Prevent <input> from overflowing parent element

--- a/src/components/02-molecules/Input/Input.scss
+++ b/src/components/02-molecules/Input/Input.scss
@@ -12,6 +12,7 @@
 
   input {
     all: unset;
+    min-width: 0;
   }
 
   textarea {
